# topchef

./: .env  .gitignore  .replit  check-restaurant-ids.js  check-restaurant.js  check-specific-restaurants.js  check_chef.py  inspect_db_schema.py  package-lock.json  package.json  print_db_path.py  pyproject.toml  run_all.ps1  seed-db.sh  test-db.js  wisdom.db
attached_assets/: Pasted-Handling-signal-winch-2025-04-20-00-26-23-0000-17315-INFO-Handling-signal-winch-2025-04--1745108849511.txt  Pasted-import-React-useState-useEffect-from-react-import-Card-CardContent-CardHeader-CardTitl-1743890223506.txt
client/: index.html
client/src/: index.css
client/src/components/: header.tsx  restaurant-info-panel.tsx  restaurant-map.tsx
openrouter-mcp/: README.md  package-lock.json  package.json
openrouter-mcp/src/: index.ts
perplexity-mcp/: README.md  package-lock.json  package.json
perplexity-mcp/src/: index.ts
server/: cron-update-candidates.ts  db.ts  index.ts  routes.ts  seed.ts  storage.ts  update-db.ts
shared/: schema.ts
templates/: index.html
topchef_agent/: agent.py  autonomous_agent.py  config.py  database.py  interactive_agent.py  main.py  requirements.txt  scheduler.py  stephai_botenberg_journal.json  stephai_journal.json
topchef_agent/static/: interactive_chat.js
topchef_agent/templates/: agent_history.html  index.html
topchef_agent/topchef_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
topchef_app/: database.py  llm_interactions.py  main.py  requirements.txt  scheduler.py
topchef_app/templates/: index.html
(+2 files in other folders)
